deploy: e5dd42a265c76687ca3e60b1837194cff5ba6f3b

--- a/collections/pvqx-8g/index.html
+++ b/collections/pvqx-8g/index.html
@@ -4,15 +4,15 @@
     <link rel="stylesheet" href="/_includes/collection.css">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chris Hartgerink&#39;s collection</title>
+    <title>Readings on improving equality in research</title>
   </head>
   <body>
-      <h1>Chris Hartgerink's collection</h1>
+      <h1>Readings on improving equality in research</h1>
 <img class="header-image" src="header.jpg" />
 <img class="icon-image" src="icon.svg" />
 <p>doi: <a href="https://doi.org/10.53962/pvqx-8g">10.53962/pvqx-8g</a></p>
 <p>Created on 2022-09-24.</p>
-<p>Last updated on  2023-06-29.</p>
+<p>Last updated on  2024-01-26.</p>
 <h2>Editors</h2>
 <ul><li>
 <p><a href="https://orcid.org/0000-0003-1050-6809">Chris Hartgerink</a></p>
@@ -22,45 +22,39 @@
 <h2>Collected works</h2>
 <ul> 
  <li>
- <p>DEI Tip Sheet: Virtual event accessibility guiding questions</p>
- <p><a href="https://doi.org/10.5281/zenodo.8043909">doi: 10.5281/zenodo.8043909</a></p>
- <blockquote>A worthwhile resource for planning inclusive and accessible events. Includes a ton of insightful nuggets!
+ <p>Charting the Constellation of Science Reform</p>
+ <p><a href="https://doi.org/10.31219/osf.io/udfw4">doi: 10.31219/osf.io/udfw4</a></p>
+ <blockquote>This is a fantastic dissertation exploring what open science communities mean, what they aren’t, and how we can reconceptualize them. Great read - well written!
  <div class="quote-footer">—Chris Hartgerink</cite></div class="quote-footer"></blockquote>
  </li>
  <li>
- <p>Leaving The Academy</p>
- <p><a href="https://doi.org/10.5281/zenodo.8015576">doi: 10.5281/zenodo.8015576</a></p>
- </li>
- <li>
- <p>The role of results in deciding to publish</p>
- <p><a href="https://doi.org/10.31222/osf.io/dgshk">doi: 10.31222/osf.io/dgshk</a></p>
- <blockquote>Fantastic preprint indicating publication bias arises at author-reviewer-editor levels alike.
+ <p>Transcripts Of 28 Interviews With Researchers Who Fabricated Data For An Experiment</p>
+ <p><a href="https://doi.org/10.5281/zenodo.832491">doi: 10.5281/zenodo.832491</a></p>
+ <blockquote>A long forgotten output of our own work, which I'm collecting here for archival purposes.
  <div class="quote-footer">—Chris Hartgerink</cite></div class="quote-footer"></blockquote>
  </li>
  <li>
- <p>Purchases dominate the carbon footprint of research laboratories</p>
- <p><a href="https://doi.org/10.1101/2023.04.04.535626">doi: 10.1101/2023.04.04.535626</a></p>
- </li>
- <li>
- <p>The Oligopoly of Academic Publishers in the Digital Era</p>
- <p><a href="https://doi.org/10.1371/journal.pone.0127502">doi: 10.1371/journal.pone.0127502</a></p>
- <blockquote>A classic in the scholarly communication space!
+ <p>The experiment begins: Arcadia publishing 1.0</p>
+ <p><a href="https://doi.org/10.57844/arcadia-050a-q254">doi: 10.57844/arcadia-050a-q254</a></p>
+ <blockquote>Arcadia Science is doing some fantastic work on reimagining how research is done, in practice.
  <div class="quote-footer">—Chris Hartgerink</cite></div class="quote-footer"></blockquote>
  </li>
  <li>
- <p>Registered report: Survey on attitudes and experiences regarding preregistration in psychological research</p>
- <p><a href="https://doi.org/10.1371/journal.pone.0281086">doi: 10.1371/journal.pone.0281086</a></p>
- </li>
- <li>
- <p>Octopus and ResearchEquals aim to break the publishing mould</p>
- <p><a href="https://doi.org/10.1038/d41586-023-00861-0">doi: 10.1038/d41586-023-00861-0</a></p>
- <blockquote>ResearchEquals got featured in Nature 😊
+ <p>Perspectives on Scientific Error</p>
+ <p><a href="https://doi.org/10.31234/osf.io/wm4v6">doi: 10.31234/osf.io/wm4v6</a></p>
+ <blockquote>Great overview of perspectives on scientific error, and how to improve research.
  <div class="quote-footer">—Chris Hartgerink</cite></div class="quote-footer"></blockquote>
  </li>
  <li>
- <p>The Fork Factor: an academic impact factor based on reuse.</p>
- <p><a href="https://doi.org/10.22541/au.160856276.66912031/v1">doi: 10.22541/au.160856276.66912031/v1</a></p>
- <blockquote>A potentially interesting metric for modular based publishing, looking at how long the paths are following a module.
+ <p>PID Network Deutschland. Netzwerk für die Förderung von persistenten Identifikatoren in  Wissenschaft und Kultur</p>
+ <p><a href="https://doi.org/10.48440/os.helmholtz.059">doi: 10.48440/os.helmholtz.059</a></p>
+ <blockquote>A new initiative to increase the use of Persistent Identifiers (PIDs) in metadata. This is super interesting as I'm in Germany and work on these integrations for R=!
+ <div class="quote-footer">—Chris Hartgerink</cite></div class="quote-footer"></blockquote>
+ </li>
+ <li>
+ <p>Illustrations from The Turing Way: Shared under CC-BY 4.0 for reuse</p>
+ <p><a href="https://doi.org/10.5281/zenodo.7587336">doi: 10.5281/zenodo.7587336</a></p>
+ <blockquote>The Turing Way keeps publishing these amazing illustrations that are great to reuse!
  <div class="quote-footer">—Chris Hartgerink</cite></div class="quote-footer"></blockquote>
  </li>
  <li>
@@ -72,39 +66,45 @@
  <div class="quote-footer">—Chris Hartgerink</cite></div class="quote-footer"></blockquote>
  </li>
  <li>
- <p>Illustrations from The Turing Way: Shared under CC-BY 4.0 for reuse</p>
- <p><a href="https://doi.org/10.5281/zenodo.7587336">doi: 10.5281/zenodo.7587336</a></p>
- <blockquote>The Turing Way keeps publishing these amazing illustrations that are great to reuse!
+ <p>The Fork Factor: an academic impact factor based on reuse.</p>
+ <p><a href="https://doi.org/10.22541/au.160856276.66912031/v1">doi: 10.22541/au.160856276.66912031/v1</a></p>
+ <blockquote>A potentially interesting metric for modular based publishing, looking at how long the paths are following a module.
  <div class="quote-footer">—Chris Hartgerink</cite></div class="quote-footer"></blockquote>
  </li>
  <li>
- <p>PID Network Deutschland. Netzwerk für die Förderung von persistenten Identifikatoren in  Wissenschaft und Kultur</p>
- <p><a href="https://doi.org/10.48440/os.helmholtz.059">doi: 10.48440/os.helmholtz.059</a></p>
- <blockquote>A new initiative to increase the use of Persistent Identifiers (PIDs) in metadata. This is super interesting as I'm in Germany and work on these integrations for R=!
+ <p>Octopus and ResearchEquals aim to break the publishing mould</p>
+ <p><a href="https://doi.org/10.1038/d41586-023-00861-0">doi: 10.1038/d41586-023-00861-0</a></p>
+ <blockquote>ResearchEquals got featured in Nature 😊
  <div class="quote-footer">—Chris Hartgerink</cite></div class="quote-footer"></blockquote>
  </li>
  <li>
- <p>Perspectives on Scientific Error</p>
- <p><a href="https://doi.org/10.31234/osf.io/wm4v6">doi: 10.31234/osf.io/wm4v6</a></p>
- <blockquote>Great overview of perspectives on scientific error, and how to improve research.
+ <p>Registered report: Survey on attitudes and experiences regarding preregistration in psychological research</p>
+ <p><a href="https://doi.org/10.1371/journal.pone.0281086">doi: 10.1371/journal.pone.0281086</a></p>
+ </li>
+ <li>
+ <p>The Oligopoly of Academic Publishers in the Digital Era</p>
+ <p><a href="https://doi.org/10.1371/journal.pone.0127502">doi: 10.1371/journal.pone.0127502</a></p>
+ <blockquote>A classic in the scholarly communication space!
  <div class="quote-footer">—Chris Hartgerink</cite></div class="quote-footer"></blockquote>
  </li>
  <li>
- <p>The experiment begins: Arcadia publishing 1.0</p>
- <p><a href="https://doi.org/10.57844/arcadia-050a-q254">doi: 10.57844/arcadia-050a-q254</a></p>
- <blockquote>Arcadia Science is doing some fantastic work on reimagining how research is done, in practice.
+ <p>Purchases dominate the carbon footprint of research laboratories</p>
+ <p><a href="https://doi.org/10.1101/2023.04.04.535626">doi: 10.1101/2023.04.04.535626</a></p>
+ </li>
+ <li>
+ <p>The role of results in deciding to publish</p>
+ <p><a href="https://doi.org/10.31222/osf.io/dgshk">doi: 10.31222/osf.io/dgshk</a></p>
+ <blockquote>Fantastic preprint indicating publication bias arises at author-reviewer-editor levels alike.
  <div class="quote-footer">—Chris Hartgerink</cite></div class="quote-footer"></blockquote>
  </li>
  <li>
- <p>Transcripts Of 28 Interviews With Researchers Who Fabricated Data For An Experiment</p>
- <p><a href="https://doi.org/10.5281/zenodo.832491">doi: 10.5281/zenodo.832491</a></p>
- <blockquote>A long forgotten output of our own work, which I'm collecting here for archival purposes.
- <div class="quote-footer">—Chris Hartgerink</cite></div class="quote-footer"></blockquote>
+ <p>Leaving The Academy</p>
+ <p><a href="https://doi.org/10.5281/zenodo.8015576">doi: 10.5281/zenodo.8015576</a></p>
  </li>
  <li>
- <p>Charting the Constellation of Science Reform</p>
- <p><a href="https://doi.org/10.31219/osf.io/udfw4">doi: 10.31219/osf.io/udfw4</a></p>
- <blockquote>This is a fantastic dissertation exploring what open science communities mean, what they aren’t, and how we can reconceptualize them. Great read - well written!
+ <p>DEI Tip Sheet: Virtual event accessibility guiding questions</p>
+ <p><a href="https://doi.org/10.5281/zenodo.8043909">doi: 10.5281/zenodo.8043909</a></p>
+ <blockquote>A worthwhile resource for planning inclusive and accessible events. Includes a ton of insightful nuggets!
  <div class="quote-footer">—Chris Hartgerink</cite></div class="quote-footer"></blockquote>
  </li>
  </ul>
