deploy: bab12b486bd2e55f1c5276dc1e00e378a89b20b7

--- a/collections/mrhg-9r/index.html
+++ b/collections/mrhg-9r/index.html
@@ -8,11 +8,12 @@
   </head>
   <body>
       <h1>Open Science Retreat 2024</h1>
+<div role="doc-subtitle">Collection of artefacts/outputs from the 2nd edition of the Open Science Retreat (https://openscienceretreat.eu/)</div>
 <img class="header-image" src="header.jpg" />
 <img class="icon-image" src="icon.png" />
 <p>doi: <a href="https://doi.org/10.53962/mrhg-9r">10.53962/mrhg-9r</a></p>
 <p>Created on 2024-03-28.</p>
-<p>Last updated on  2024-03-28.</p>
+<p>Last updated on  2024-04-08.</p>
 <h2>Editors</h2>
 <ul><li>
 <p><a href="https://orcid.org/0000-0003-1050-6809">Chris Hartgerink</a></p>
@@ -28,6 +29,44 @@
  <li>
  <p>Persona non grata in open infrastructure</p>
  <p><a href="https://doi.org/10.53962/n17w-rb43">doi: 10.53962/n17w-rb43</a></p>
+ </li>
+ <li>
+ <p>Fostering a national Community-led network to accelerate Open Science practices: Foster OSC-NL</p>
+ <p><a href="https://doi.org/10.53962/q5k9-bsxw">doi: 10.53962/q5k9-bsxw</a></p>
+ <blockquote>The grant proposal that made this Open Science Retreat possible!
+ <div class="quote-footer">—Anna van 't Veer</cite></div class="quote-footer"></blockquote>
+ </li>
+ <li>
+ <p>Change narrative workshop sketch notes</p>
+ <p><a href="https://doi.org/10.53962/yv22-p1b2">doi: 10.53962/yv22-p1b2</a></p>
+ <blockquote>A visual summary of the change narrative workshop at the Open Science Retreat
+ <div class="quote-footer">—Heidi Seibold</cite></div class="quote-footer"></blockquote>
+ </li>
+ <li>
+ <p>Recognising Open Science practices in higher education staff assessment</p>
+ <p><a href="https://doi.org/10.5281/zenodo.10904114">doi: 10.5281/zenodo.10904114</a></p>
+ </li>
+ <li>
+ <p>Open Science Retreat #1: impressions</p>
+ <p><a href="https://doi.org/10.59350/znw1y-zfg25">doi: 10.59350/znw1y-zfg25</a></p>
+ </li>
+ <li>
+ <p>Measuring Open Science</p>
+ <p><a href="https://doi.org/10.53962/tn38-4q91">doi: 10.53962/tn38-4q91</a></p>
+ <blockquote>Summary of the morning teamwork sessions on measuring OS which collected, reviewed and analysed what current surveys cover, and visualised this in an online shiny (check it out to e.g. filter on survey year and quickly see what aspect of open science the survey covers!).
+ <div class="quote-footer">—Anna van 't Veer</cite></div class="quote-footer"></blockquote>
+ </li>
+ <li>
+ <p>Fairly FAIR code in 10 steps: Initial Draft</p>
+ <p><a href="https://doi.org/10.5281/zenodo.10943605">doi: 10.5281/zenodo.10943605</a></p>
+ <blockquote>A low entry level super-minimal guide to ensure FAIR code which already greatly enhances the reproducibility and reusability of published work.
+ <div class="quote-footer">—Anna van 't Veer</cite></div class="quote-footer"></blockquote>
+ </li>
+ <li>
+ <p>oscutrecht/OpenScienceSurveys: v0.0.1</p>
+ <p><a href="https://doi.org/10.5281/zenodo.10932820">doi: 10.5281/zenodo.10932820</a></p>
+ <blockquote>First version of the open science survey dashboard that came out of the 'Measuring Open Science' teamwork (see summary in this collection as well).
+ <div class="quote-footer">—Anna van 't Veer</cite></div class="quote-footer"></blockquote>
  </li>
  </ul>
 
