deploy: e9fb21328faa59dc9b63963d4e08e7a21a0ac90c

--- a/collections/mrhg-9r/index.html
+++ b/collections/mrhg-9r/index.html
@@ -13,7 +13,7 @@
 <img class="icon-image" src="icon.png" />
 <p>doi: <a href="https://doi.org/10.53962/mrhg-9r">10.53962/mrhg-9r</a></p>
 <p>Created on 2024-03-28.</p>
-<p>Last updated on  2024-04-08.</p>
+<p>Last updated on  2024-05-10.</p>
 <h2>Editors</h2>
 <ul><li>
 <p><a href="https://orcid.org/0000-0003-1050-6809">Chris Hartgerink</a></p>
@@ -23,7 +23,7 @@
 <p><a href="https://orcid.org/0000-0002-8960-9642">Heidi Seibold</a></p>
  </li></ul>
 <h2>Summary</h2>
-<p>Here you can find all the artefacts/outputs from the 2nd edition of the Open Science Retreat (#OSR24NL), from the 25th to the 29th of March, 2024. This took place in Schoorl, the Netherlands. During this week people from various disciplines came together to share knowledge, experiences, and best practices related to open science.</p><p><br></p><p>In order to add your work to this collection:</p><ol><li>Publish your artefacts/outputs directly on ResearchEquals or another platform that provides you with a DOI (e.g., Zenodo, Figshare)</li><li>Submit your DOI to be included. This can be done in two ways:</li></ol><ul><li class="ql-indent-1">Directly submit your DOIs on the right while logged in</li><li class="ql-indent-1">Share your DOI on the #Unconference-teamwork channel on Mattermost</li></ul>
+<p>Here you can find all the artefacts/outputs from the 2nd edition of the Open Science Retreat (#OSR24NL), from the 25th to the 29th of March, 2024. This took place in Schoorl, the Netherlands. During this week people from various disciplines came together to share knowledge, experiences, and best practices related to open science. </p><p><br></p><p>For summaries and contributor ORCIDs, see module "Selection of summaries of some of the collaborative work during Open Science Retreat 2024, the Netherlands (#OSR24NL) &amp; list of contributors of those participants who gave their ORCID for the contributor list."</p><p><br></p><p>Next to writing summaries of their activities, participants of the OS retreat have submitted their works to this collection by:</p><ol><li>Publishing their artefacts/outputs directly on ResearchEquals or another platform that provides you with a DOI (e.g., Zenodo, Figshare)</li><li>Submitting their DOI to be included in this collection.</li></ol><p>After this, the editors of this collection have accepted and annotated the works for long term curation.</p>
 <h2>Collected works</h2>
 <ul> 
  <li>
@@ -35,20 +35,6 @@
  <p><a href="https://doi.org/10.53962/q5k9-bsxw">doi: 10.53962/q5k9-bsxw</a></p>
  <blockquote>The grant proposal that made this Open Science Retreat possible!
  <div class="quote-footer">—Anna van 't Veer</cite></div class="quote-footer"></blockquote>
- </li>
- <li>
- <p>Change narrative workshop sketch notes</p>
- <p><a href="https://doi.org/10.53962/yv22-p1b2">doi: 10.53962/yv22-p1b2</a></p>
- <blockquote>A visual summary of the change narrative workshop at the Open Science Retreat
- <div class="quote-footer">—Heidi Seibold</cite></div class="quote-footer"></blockquote>
- </li>
- <li>
- <p>Recognising Open Science practices in higher education staff assessment</p>
- <p><a href="https://doi.org/10.5281/zenodo.10904114">doi: 10.5281/zenodo.10904114</a></p>
- </li>
- <li>
- <p>Open Science Retreat #1: impressions</p>
- <p><a href="https://doi.org/10.59350/znw1y-zfg25">doi: 10.59350/znw1y-zfg25</a></p>
  </li>
  <li>
  <p>Measuring Open Science</p>
@@ -66,6 +52,40 @@
  <p>oscutrecht/OpenScienceSurveys: v0.0.1</p>
  <p><a href="https://doi.org/10.5281/zenodo.10932820">doi: 10.5281/zenodo.10932820</a></p>
  <blockquote>First version of the open science survey dashboard that came out of the 'Measuring Open Science' teamwork (see summary in this collection as well).
+ <div class="quote-footer">—Anna van 't Veer</cite></div class="quote-footer"></blockquote>
+ </li>
+ <li>
+ <p>Research in 2050</p>
+ <p><a href="https://doi.org/10.53962/tbp2-qxg5">doi: 10.53962/tbp2-qxg5</a></p>
+ </li>
+ <li>
+ <p>Supporting University Change: Lessons learned from the Open Science community</p>
+ <p><a href="https://doi.org/10.5281/zenodo.10966479">doi: 10.5281/zenodo.10966479</a></p>
+ <blockquote>Great example of doing the hard work of unraveling the much needed bottom-up and top-down collaboration to accelerate change.
+ <div class="quote-footer">—Anna van 't Veer</cite></div class="quote-footer"></blockquote>
+ </li>
+ <li>
+ <p>Open Science Retreat #2: CiTO Nanopublications</p>
+ <p><a href="https://doi.org/10.59350/n39kz-48173">doi: 10.59350/n39kz-48173</a></p>
+ <blockquote>An update on how to use nanopublications for citation intention annotation.
+ <div class="quote-footer">—Anna van 't Veer</cite></div class="quote-footer"></blockquote>
+ </li>
+ <li>
+ <p>Open Science Retreat #1: impressions</p>
+ <p><a href="https://doi.org/10.59350/znw1y-zfg25">doi: 10.59350/znw1y-zfg25</a></p>
+ <blockquote>A first impression about being at the Open Science Retreat by Egon Willighagen.
+ <div class="quote-footer">—Anna van 't Veer</cite></div class="quote-footer"></blockquote>
+ </li>
+ <li>
+ <p>Change narrative workshop sketch notes</p>
+ <p><a href="https://doi.org/10.53962/yv22-p1b2">doi: 10.53962/yv22-p1b2</a></p>
+ <blockquote>Great that visual media can also be a module on ResearchEquals, to make all parts of our academic work visible.
+ <div class="quote-footer">—Anna van 't Veer</cite></div class="quote-footer"></blockquote>
+ </li>
+ <li>
+ <p>Recognising Open Science practices in higher education staff assessment</p>
+ <p><a href="https://doi.org/10.5281/zenodo.10904114">doi: 10.5281/zenodo.10904114</a></p>
+ <blockquote>Open Science practices during assessment interviews; consider using this during your interview, or asking your leadership or policy makers to have a look!
  <div class="quote-footer">—Anna van 't Veer</cite></div class="quote-footer"></blockquote>
  </li>
  </ul>
