deploy: ba7cac33e21eaf3ae78402671824f98695793c6a

--- a/collections/zw5c-fx/index.html
+++ b/collections/zw5c-fx/index.html
@@ -13,7 +13,7 @@
 <img class="icon-image" src="icon.png" />
 <p>doi: <a href="https://doi.org/10.53962/zw5c-fx">10.53962/zw5c-fx</a></p>
 <p>Created on 2023-02-20.</p>
-<p>Last updated on  2023-03-02.</p>
+<p>Last updated on  2024-05-20.</p>
 <h2>Editors</h2>
 <ul><li>
 <p><a href="https://orcid.org/0000-0002-1411-4039">Hannah L. Harrison</a></p>
@@ -21,32 +21,36 @@
 <p><a href="https://orcid.org/0000-0001-6039-2331">Philip Loring</a></p>
  </li></ul>
 <h2>Summary</h2>
-<p>PubCasts are the creation of Dr. Hannah L. Harrison (Dalhousie University, Canada) and Dr. Philip A. Loring (University of Guelph, Canada) and offer researchers a way to share their work with broader audiences through a more accessible and engaging format.</p><p><br></p><p>Follow Harrison and Loring's PubCast Protocol (available on ResearchEquals) to learn how to make your own PubCast and add it to this collection.</p>
+<p>PubCasts are the creation of Dr. Hannah L. Harrison (Dalhousie University, Canada) and Dr. Philip A. Loring (The Nature Conservancy) and offer researchers a way to share their work with broader audiences through a more accessible and engaging format.</p><p><br></p><p>Follow Harrison and Loring's PubCast Protocol (available on ResearchEquals) to learn how to make your own PubCast and add it to this collection.</p>
 <h2>Collected works</h2>
 <ul> 
  <li>
- <p>PubCast - Seeing Beneath Disputes</p>
- <p><a href="https://doi.org/10.53962/rf8m-9w0b">doi: 10.53962/rf8m-9w0b</a></p>
- </li>
- <li>
- <p>PubCast - “Nature’s Little Helpers”: A benefits approach to voluntary cultivation of hatchery fish to support wild Atlantic salmon (Salmo salar) populations in Norway, Wales, and Germany</p>
- <p><a href="https://doi.org/10.53962/resg-g417">doi: 10.53962/resg-g417</a></p>
- </li>
- <li>
- <p>PubCast - ‘Do you care about the river?' A critical discourse analysis and lessons for management of social conflict over Atlantic salmon (Salmo salar) conservation in the case of voluntary stocking in Wales.</p>
- <p><a href="https://doi.org/10.53962/qhh2-4yjj">doi: 10.53962/qhh2-4yjj</a></p>
- </li>
- <li>
- <p>PubCast - Managing Many Nets</p>
- <p><a href="https://doi.org/10.53962/wt8e-3sw8">doi: 10.53962/wt8e-3sw8</a></p>
+ <p>Urban harvests: food security and local fish and shellfish in Southcentral Alaska</p>
+ <p><a href="https://doi.org/10.53962/k2m4-2x3h">doi: 10.53962/k2m4-2x3h</a></p>
  </li>
  <li>
  <p>PubCast - Big Catch, Undecided Risks: Perspectives of Risk, Reward, and Trade-Offs in Alaska's Salmon Enhancement Program</p>
  <p><a href="https://doi.org/10.53962/gvjz-mbgf">doi: 10.53962/gvjz-mbgf</a></p>
  </li>
  <li>
- <p>Urban harvests: food security and local fish and shellfish in Southcentral Alaska</p>
- <p><a href="https://doi.org/10.53962/k2m4-2x3h">doi: 10.53962/k2m4-2x3h</a></p>
+ <p>PubCast - Managing Many Nets</p>
+ <p><a href="https://doi.org/10.53962/wt8e-3sw8">doi: 10.53962/wt8e-3sw8</a></p>
+ </li>
+ <li>
+ <p>PubCast - ‘Do you care about the river?' A critical discourse analysis and lessons for management of social conflict over Atlantic salmon (Salmo salar) conservation in the case of voluntary stocking in Wales.</p>
+ <p><a href="https://doi.org/10.53962/qhh2-4yjj">doi: 10.53962/qhh2-4yjj</a></p>
+ </li>
+ <li>
+ <p>PubCast - “Nature’s Little Helpers”: A benefits approach to voluntary cultivation of hatchery fish to support wild Atlantic salmon (Salmo salar) populations in Norway, Wales, and Germany</p>
+ <p><a href="https://doi.org/10.53962/resg-g417">doi: 10.53962/resg-g417</a></p>
+ </li>
+ <li>
+ <p>PubCast - Seeing Beneath Disputes</p>
+ <p><a href="https://doi.org/10.53962/rf8m-9w0b">doi: 10.53962/rf8m-9w0b</a></p>
+ </li>
+ <li>
+ <p>PubCast: A commentary on the role of hatcheries and stocking programs in salmon conservation and adapting ourselves to less‐than‐wild futures</p>
+ <p><a href="https://doi.org/10.53962/kk47-wsmx">doi: 10.53962/kk47-wsmx</a></p>
  </li>
  </ul>
 
